Bench and dynamic bitrev

--- a/essay/ib-ee-fft-paper.tex
+++ b/essay/ib-ee-fft-paper.tex
@@ -1169,12 +1169,26 @@ static void fft_block_5(float* re, float* im)
 	
 	It is found that on most modern processors, wrapping \textit{fft\_block\_5}, \textit{fft\_block\_6}, and \textit{fft\_block\_8} into functions will lead to optimal cache usage for transforms that are equal or less than 2048 points.
 
-\chapter{Evaluation and Review}
+\chapter{Evaluation and Review} \indent
+
+	The performance of \textit{ee-fft} and serveral other FFT packages will be assessed. In the end, some possible ways to further improve \textit{ee-fft} will be pointed out.
+
+\section{Benchmark} \indent
+
+\subsection{Benchmark Method} \indent
+
+\subsection{Platforms and Hardwares} \indent
+
+\subsection{Softwares} \indent
+
+\subsection{Benchmark Result} \indent
+
+\section{Improvements and Extensions} \indent
 
 \appendix
-\chapter{Source Code}
+\chapter{Source Code} \indent
 
-\chapter{Bibliography}
+\chapter{Bibliography} \indent
 
 \end{document}
 
