Some changes to abstract

--- a/essay/ib-ee-fft-paper.tex
+++ b/essay/ib-ee-fft-paper.tex
@@ -45,7 +45,7 @@
 	Fast Fourier Transform(FFT), as an optimized algorithm and discrete version derived from Fourier Transform(FT), is widely used in the field of Engineering and Computer Science. %In most occasions, such transform can be understood as a change from time domain to frequency domain on a series of signal; the Fourier Transform of a time domain signal completely describes the frequency components of the signal.
 	Typical use of FFT involves data compression, audio/image processing, speech synthesis/recognization, digital communication and many other important applications.
 	
-	The purpose of this Extended Essay is to present a method to implement a highly optimized and light-weighted FFT routine library, which is named ee-fft.
+	The purpose of this Extended Essay is to present an implement method as well as to implement a highly optimized and light-weighted FFT routine library, which is named ee-fft.
 
 	The choice of CPU architecture is x86 with SSE2 instruction set support since a vast majority of today's personal computer are compatible with such instruction sets.
 	
